--- a/Cancer_Gene_Classification.ipynb
+++ b/Cancer_Gene_Classification.ipynb
@@ -6,8 +6,7 @@
       "name": "Cancer Gene Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgdGXmMOY6y2HAt4QHan5h",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOsY6b5xocMA9f89f2qClQi"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/tahirdme/Principal-Component-Analysis-Gene-Cancer-Markers/blob/master/Cancer_Gene_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -3877,7 +3866,30 @@
         "colab": {}
       },
       "source": [
-        ""
+        "#Tuners\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "# RandomizedSearch for tuning (possibly fa\n",
+        "from sklearn.model_selection import RandomizedSearchCV"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d4S9tv5cYXqY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Metrics\n",
+        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, log_loss\n",
+        "\n",
+        "# Models\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier"
       ],
       "execution_count": 0,
       "outputs": []
