--- a/Cancer_Gene_Classification.ipynb
+++ b/Cancer_Gene_Classification.ipynb
@@ -34,7 +34,7 @@
         "The training data contain gene expression values for patients 1 through 38.\n",
         "The test data contain gene expression values for patients 39 through 72.\n",
         "\n",
-        "The goal is to categorize the samples into AMP and ALL using Principal Component Analysis."
+        "The goal is to categorize the samples into AMP and ALL using Principal Component Analysis and ML algorithms."
       ]
     },
     {
